--- a/Roeivereniging/View/ReservePage.xaml
+++ b/Roeivereniging/View/ReservePage.xaml
@@ -4,11 +4,64 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:View"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="ReservePage">
+      mc:Ignorable="d"
+      Title="ReservePage" Height="938" Width="1669">
 
     <Grid>
-        <DatePicker HorizontalAlignment="Left" Margin="122,312,0,0" VerticalAlignment="Top" FirstDayOfWeek="Monday" IsDropDownOpen="True"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="5*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+        <Rectangle Grid.Column="1" Grid.Row="0" Margin="15,30,15,30" Grid.RowSpan="2" HorizontalAlignment="Stretch" Stroke="#FFF3F3F3" VerticalAlignment="Stretch" RadiusX="12" RadiusY="12" Fill="White">
+            <Rectangle.Effect>
+                <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
+            </Rectangle.Effect>
+        </Rectangle>
+        <Rectangle Grid.Column="0" Grid.Row="0" Margin="15,30,15,15" HorizontalAlignment="Stretch" Stroke="#FFF3F3F3" VerticalAlignment="Stretch" RadiusX="12" RadiusY="12" Fill="White">
+            <Rectangle.Effect>
+                <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
+            </Rectangle.Effect>
+        </Rectangle>
+        <Rectangle Grid.Column="0" Grid.Row="1" Margin="15,15,15,30" HorizontalAlignment="Stretch" Stroke="#FFF3F3F3" VerticalAlignment="Stretch" RadiusX="12" RadiusY="12" Fill="White">
+            <Rectangle.Effect>
+                <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
+            </Rectangle.Effect>
+        </Rectangle>
+        <Grid Grid.Row="1" Margin="15,15,15,30">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="6*" />
+                <ColumnDefinition Width="6*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="4*" />
+                <RowDefinition Height="4*" />
+                <RowDefinition Height="4*" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+
+
+            <DatePicker Grid.Column="1" HorizontalAlignment="Stretch" Margin="10,10,10,10" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24"/>
+            <Button Content="Reserveer" Margin="10,10,10,10" Grid.Column="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" />
+            <Button Content="Anuleren" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#00DDDDDD"/>
+            <Label Content="Duur: --:--" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24"/>
+
+            <TextBox Grid.Column="1" HorizontalAlignment="Center" Margin="4,1,4,1" Grid.Row="1" Text="start tijd" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" FontSize="24"/>
+            <TextBox Grid.Column="2" HorizontalAlignment="Center" Margin="4,1,4,1" Grid.Row="1" Text="eind tijd" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" FontSize="24"/>
+
+
+
+
+
+        </Grid>
+        <Label Grid.Column="0" Content="Selecteer een type:" HorizontalAlignment="Left" Margin="15,25,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label Grid.Column="1" Content="Selecteer een boot:" HorizontalAlignment="Left" Margin="15,25,0,0" VerticalAlignment="Top" FontSize="24"/>
     </Grid>
 </Page>
