--- a/Roeivereniging/View/ReservePage.xaml
+++ b/Roeivereniging/View/ReservePage.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="View.ReservePage"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:View"
+      xmlns:Model="clr-namespace:Model;assembly=Model" x:Class="View.ReservePage"
       mc:Ignorable="d"
       Title="ReservePage" Height="938" Width="1669">
 
@@ -60,6 +61,19 @@
 
 
 
+        </Grid>
+        <Grid Grid.Row="0" Grid.Column="1" Margin="38,72,66,53" Grid.RowSpan="2">
+            <ListView  x:Name="LbBoats" d:ItemsSource="{d:SampleData ItemCount=50}">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Type" Width="50" DisplayMemberBinding="{Binding type}" />
+                        <GridViewColumn Header="Naam" Width="120" DisplayMemberBinding="{Binding name}" />
+                        <GridViewColumn Header="Stuur" Width="150" DisplayMemberBinding="{Binding steer}" />
+                        <GridViewColumn Header="Scullen" Width="150" DisplayMemberBinding="{Binding sculling}" />
+                        <!--<GridViewColumn Header="Mail" Width="150" DisplayMemberBinding="{Binding Mail}" />-->
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </Grid>
         <Label Grid.Column="0" Content="Selecteer een type:" HorizontalAlignment="Left" Margin="15,25,0,0" VerticalAlignment="Top" FontSize="24"/>
         <Label Grid.Column="1" Content="Selecteer een boot:" HorizontalAlignment="Left" Margin="15,25,0,0" VerticalAlignment="Top" FontSize="24"/>
