--- a/Roeivereniging/View/ReservePage.xaml
+++ b/Roeivereniging/View/ReservePage.xaml
@@ -2,9 +2,9 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:View"
-      xmlns:Model="clr-namespace:Model;assembly=Model" x:Class="View.ReservePage"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+      x:Class="View.ReservePage"
       mc:Ignorable="d"
       Title="ReservePage" Height="938" Width="1669">
 
@@ -33,7 +33,7 @@
                 <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
             </Rectangle.Effect>
         </Rectangle>
-        <Grid Grid.Row="1" Margin="15,15,15,30">
+        <Grid Grid.Row="1" Grid.Column="0" Margin="15,15,15,30">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="6*" />
@@ -48,14 +48,16 @@
                 <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
 
-
-            <DatePicker Grid.Column="1" HorizontalAlignment="Stretch" Margin="10,10,10,10" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24"/>
+            <DatePicker x:Name="Date" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10,10,10,10" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24" FirstDayOfWeek="Monday" DataContextChanged="Date_DataContextChanged" SelectedDateChanged="Date_SelectedDateChanged"/>
             <Button Content="Reserveer" Margin="10,10,10,10" Grid.Column="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" />
             <Button Content="Anuleren" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#00DDDDDD"/>
             <Label Content="Duur: --:--" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24"/>
 
-            <TextBox Grid.Column="1" HorizontalAlignment="Center" Margin="4,1,4,1" Grid.Row="1" Text="start tijd" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" FontSize="24"/>
-            <TextBox Grid.Column="2" HorizontalAlignment="Center" Margin="4,1,4,1" Grid.Row="1" Text="eind tijd" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" FontSize="24"/>
+            <Label Grid.Row="1" Grid.Column="1" Content="Start tijd"></Label>
+            <xctk:TimePicker x:Name="StartTime" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" ValueChanged="StartTime_ValueChanged"></xctk:TimePicker>
+            <Label Grid.Row="1" Grid.Column="2" Content="Start tijd"></Label>
+            <xctk:TimePicker x:Name="EndTime" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" ValueChanged="EndTime_ValueChanged"></xctk:TimePicker>
+         
 
 
 
