--- a/Roeivereniging/View/ReservePage.xaml
+++ b/Roeivereniging/View/ReservePage.xaml
@@ -33,6 +33,61 @@
                 <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
             </Rectangle.Effect>
         </Rectangle>
+
+        <Grid Grid.Row="0" Margin="15,15,15,30">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="6*" />
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="4*" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+            <Label Content="Bouwtype:" Grid.Column="1" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Top" FontSize="24"/>
+            <!--<TextBox Grid.Column="2" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="1" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="24"/>-->
+            <ComboBox Grid.Column="2" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120" FontSize="24">
+                <ComboBoxItem>A-boten</ComboBoxItem>
+                <ComboBoxItem IsSelected="True">B-boten</ComboBoxItem>
+                <ComboBoxItem>C-boten</ComboBoxItem>
+                <ComboBoxItem>Wherry</ComboBoxItem>
+            </ComboBox>
+            <Label Content="Aantal roeiers:" Grid.Column="1" HorizontalAlignment="Left" Margin="0,50,0,0" Grid.Row="1" VerticalAlignment="Top" FontSize="24"/>
+            <TextBox Grid.Column="2" HorizontalAlignment="Center" Margin="0,50,0,0" Grid.Row="1" Text="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="24"/>
+    
+            
+            <Label Content="Met stuur:" Grid.Column="1" HorizontalAlignment="Left" Margin="0,100,0,0" Grid.Row="1" VerticalAlignment="Top" FontSize="24"/>
+            <CheckBox Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,120,0,0" Grid.Row="1" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+                <CheckBox.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform ScaleX="2" ScaleY="2"/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </CheckBox.RenderTransform>
+            </CheckBox>
+
+            <Label Content="Scullen:" Grid.Column="1" HorizontalAlignment="Left" Margin="0,150,0,0" Grid.Row="1" VerticalAlignment="Top" FontSize="24"/>
+            <CheckBox Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,170,0,0" Grid.Row="1" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+                <CheckBox.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform ScaleX="2" ScaleY="2"/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </CheckBox.RenderTransform>
+            </CheckBox>
+
+
+
+
+        </Grid>
+        
+
         <Grid Grid.Row="1" Margin="15,15,15,30">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
@@ -56,14 +111,12 @@
 
             <TextBox Grid.Column="1" HorizontalAlignment="Center" Margin="4,1,4,1" Grid.Row="1" Text="start tijd" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" FontSize="24"/>
             <TextBox Grid.Column="2" HorizontalAlignment="Center" Margin="4,1,4,1" Grid.Row="1" Text="eind tijd" TextWrapping="Wrap" VerticalAlignment="Center" Width="200" FontSize="24"/>
-
-
-
-
-
         </Grid>
+        
+        
+        
         <Grid Grid.Row="0" Grid.Column="1" Margin="38,72,66,53" Grid.RowSpan="2">
-            <ListView  x:Name="LbBoats" d:ItemsSource="{d:SampleData ItemCount=50}">
+            <ListView  x:Name="LbBoats" d:ItemsSource="{d:SampleData ItemCount=50} " FontSize="16">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Type" Width="50" DisplayMemberBinding="{Binding type}" />
