--- a/Roeivereniging/View/ReservePage.xaml
+++ b/Roeivereniging/View/ReservePage.xaml
@@ -6,7 +6,7 @@
       xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
       x:Class="View.ReservePage"
       mc:Ignorable="d"
-      Title="ReservePage" Height="938" Width="1669">
+      Title="ReservePage" Height="938" Width="1669"> 
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -104,8 +104,8 @@
             </Grid.RowDefinitions>
 
             <DatePicker x:Name="Date" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10,10,10,10" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24" FirstDayOfWeek="Monday" DataContextChanged="Date_DataContextChanged" SelectedDateChanged="Date_SelectedDateChanged"/>
-            <Button Content="Reserveer" Margin="10,10,10,10" Grid.Column="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" />
-            <Button Content="Anuleren" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#00DDDDDD"/>
+            <Button Content="Reserveer" Margin="10,10,10,10" Grid.Column="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" BorderThickness="0,0,0,0" Foreground="White"/>
+            <Button Content="Anuleren" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#00DDDDDD" BorderThickness="2,2,2,2"/>
             <Label Content="Duur: --:--" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24"/>
 
             <Label Grid.Row="1" Grid.Column="1" Content="Start tijd"></Label>
