--- a/Roeivereniging/View/ReservePage.xaml
+++ b/Roeivereniging/View/ReservePage.xaml
@@ -103,7 +103,7 @@
                 <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
 
-            <Button Content="Reserveer" Margin="10,10,10,10" Grid.Column="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" BorderThickness="0,0,0,0" Foreground="White"/>
+            <Button Content="Reserveer" Margin="10,10,10,10" Grid.Column="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" BorderThickness="0,0,0,0" Foreground="White" Click="Button_Click"/>
             <Button Content="Anuleren" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#00DDDDDD" BorderThickness="2,2,2,2"/>
             <DatePicker x:Name="Date" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10,10,10,10" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24" FirstDayOfWeek="Monday" SelectedDateChanged="Date_SelectedDateChanged"/>
             <Label Content="Duur: --:--" Margin="10,10,10,10" Grid.Column="2" HorizontalAlignment="Stretch" Grid.Row="2" VerticalAlignment="Stretch" FontSize="24"/>
