--- a/Roeivereniging/View/ViewReservationsPage.xaml
+++ b/Roeivereniging/View/ViewReservationsPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:View"
       mc:Ignorable="d"
-      Title="ViewReservationsPage" Height="450" Width="800">
+      Title="ViewReservationsPage" Height="450" Width="800" Loaded="Page_Loaded">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -25,20 +25,24 @@
         </Rectangle>
 
 
-        <Grid Grid.Column="1" Margin="15,30,15,30">
+        <Grid Grid.Column="1" Margin="15,30,15,30" DataContext="{Binding SelectedItem, ElementName=LvRervations}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="4*" />
                 <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1.1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            
-            <Label Content="Boot Naam" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="32"/>
-            <Label Content="Gereseveerd vanaf --:-- tot --:--" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" FontSize="16"/>
-            
+
+            <Label Content="{Binding boat.name}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="32"/>
+            <Grid>
+                <Label Content="Gereserveerd vanaf" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" FontSize="16"/>
+                <Label Content="{Binding StartTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="150,50,0,0" VerticalAlignment="Top" FontSize="16"/>
+                <Label Content="tot" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="190,50,0,0" VerticalAlignment="Top" FontSize="16"/>
+                <Label Content="{Binding EndTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="215,50,0,0" VerticalAlignment="Top" FontSize="16"/>
+            </Grid>
             <Button Content="Defect melden" Margin="10,10,10,10" Grid.Column="0" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" BorderThickness="0,0,0,0" Foreground="White" />
             <Button Content="Reservering anuleren" Margin="10,10,10,10" Grid.Column="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" BorderThickness="0,0,0,0" Foreground="White"/>
 
@@ -47,10 +51,12 @@
 
 
 
-        <ListView Grid.Column="0" Margin="25,40,25,40" FontSize="16">
+        <ListView x:Name="LvRervations" Grid.Column="0" Margin="25,40,25,40" FontSize="16" SelectionChanged="LvRervations_SelectionChanged">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Reserveringen" Width="120" />
+                    <GridViewColumn Header="Datum" Width="auto" DisplayMemberBinding="{Binding Date}"></GridViewColumn>
+                    <GridViewColumn Header="Type boot" Width="auto" DisplayMemberBinding="{Binding boat.type}"></GridViewColumn>
+
                 </GridView>
             </ListView.View>
         </ListView>
