--- a/Roeivereniging/View/ViewReservationsPage.xaml
+++ b/Roeivereniging/View/ViewReservationsPage.xaml
@@ -42,8 +42,25 @@
                 <Label Content="{Binding StartTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="150,50,0,0" VerticalAlignment="Top" FontSize="16"/>
                 <Label Content="tot" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="190,50,0,0" VerticalAlignment="Top" FontSize="16"/>
                 <Label Content="{Binding EndTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="215,50,0,0" VerticalAlignment="Top" FontSize="16"/>
+                
             </Grid>
-            <Button Content="Defect melden" Margin="10,10,10,10" Grid.Column="0" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" BorderThickness="0,0,0,0" Foreground="White" />
+            <Button Content="Defect melden" Margin="10,10,10,10" Grid.Column="0" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" BorderThickness="0,0,0,0" Foreground="White" Click="Button_Click">
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding boat.defect}" Value="True">
+                                <Setter Property="Background" Value="Red" />
+                                <Setter Property="IsEnabled" Value="False"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding boat.defect}" Value="False">
+                                <Setter Property="Background" Value="#FF6BB0E8" />
+                                <Setter Property="IsEnabled" Value="True"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+
+            </Button>
             <Button Content="Reservering anuleren" Margin="10,10,10,10" Grid.Column="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" BorderThickness="0,0,0,0" Foreground="White"/>
 
 
