--- a/Roeivereniging/View/ViewReservationsPage.xaml
+++ b/Roeivereniging/View/ViewReservationsPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:View"
       mc:Ignorable="d"
-      Title="ViewReservationsPage" Height="450" Width="800" Loaded="Page_Loaded">
+      Title="ViewReservationsPage" Loaded="Page_Loaded"> 
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -27,21 +27,30 @@
 
         <Grid Grid.Column="1" Margin="15,30,15,30" DataContext="{Binding SelectedItem, ElementName=LvRervations}">
             <Grid.RowDefinitions>
-                <RowDefinition Height="4*" />
+                <RowDefinition Height="7*" />
                 <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1.1*" />
+                <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
 
-            <Label Content="{Binding boat.name}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="32"/>
+            <Label Content="{Binding boat.name}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="72"/>
             <Grid>
-                <Label Content="Gereserveerd vanaf" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" FontSize="16"/>
-                <Label Content="{Binding StartTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="150,50,0,0" VerticalAlignment="Top" FontSize="16"/>
-                <Label Content="tot" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="190,50,0,0" VerticalAlignment="Top" FontSize="16"/>
-                <Label Content="{Binding EndTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="215,50,0,0" VerticalAlignment="Top" FontSize="16"/>
+                <!--<Label Content="Gereserveerd vanaf" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" FontSize="26"/>-->
+
+                <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,120,0,0" VerticalAlignment="Top" >
+                    <TextBlock FontSize="28" Text="Gereserveerd vanaf "/>
+                    <TextBlock FontSize="28" Text="{Binding StartTime}" FontWeight="Bold"/>
+                    <TextBlock FontSize="28" Text=" tot "/>
+                    <TextBlock FontSize="28" Text="{Binding EndTime}" FontWeight="Bold"/>
+                </StackPanel>
+
+
+                <!--<Label Content="{Binding StartTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="170,50,0,0" VerticalAlignment="Top" FontSize="26"/>
+                <Label Content="tot" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="240,50,0,0" VerticalAlignment="Top" FontSize="26"/>
+                <Label Content="{Binding EndTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="235,50,0,0" VerticalAlignment="Top" FontSize="26"/>-->
             </Grid>
             <Button Content="Defect melden" Margin="10,10,10,10" Grid.Column="0" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" BorderThickness="0,0,0,0" Foreground="White" />
             <Button Content="Reservering anuleren" Margin="10,10,10,10" Grid.Column="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" Background="#FF6BB0E8" BorderThickness="0,0,0,0" Foreground="White"/>
