--- a/Roeivereniging/View/ViewReservationsPage.xaml
+++ b/Roeivereniging/View/ViewReservationsPage.xaml
@@ -52,7 +52,7 @@
                 <Label Content="tot" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="240,50,0,0" VerticalAlignment="Top" FontSize="26"/>
                 <Label Content="{Binding EndTime}" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="235,50,0,0" VerticalAlignment="Top" FontSize="26"/>-->
             </Grid>
-            <Button Content="Defect melden" Margin="10,10,10,10" Grid.Column="0" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" BorderThickness="0,0,0,0" Foreground="White" Click="Button_Click">
+            <Button Content="Defect melden" Margin="10,10,10,10" Grid.Column="0" HorizontalAlignment="Stretch" Grid.RowSpan="1" Grid.Row="3" VerticalAlignment="Stretch" FontSize="24" BorderThickness="0,0,0,0" Foreground="White" Click="BtnReportDefect_click">
                 <Button.Style>
                     <Style TargetType="Button">
                         <Style.Triggers>
