--- a/Roeivereniging/View/RepairBoatDialog.xaml
+++ b/Roeivereniging/View/RepairBoatDialog.xaml
@@ -11,6 +11,6 @@
         <Label Content="{Binding boat.type}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,20,0"></Label>
         <Label Content="Reparatie beschrijving" HorizontalAlignment="Left" Margin="20,60,0,0" VerticalAlignment="Top"/>
         <TextBox Margin="20,85,20,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="230"/>
-        <Button Content="Button" HorizontalAlignment="Stretch" Margin="20,0,20,20" VerticalAlignment="Bottom" Height="59" Width="547"/>
+        <Button Content="Button" HorizontalAlignment="Stretch" Margin="20,0,20,20" VerticalAlignment="Bottom" Height="59" Width="547" Click="Button_Click"/>
     </Grid>
 </Window>
