Added accounts page and moved a few files for organisation

--- a/Roeivereniging/View/ForgotPasswordWindow.xaml
+++ b/Roeivereniging/View/ForgotPasswordWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:View"
         mc:Ignorable="d"
-        Title="ForgotPasswordWindow" Height="120" Width="180">
-    <Grid>
-        <Label x:Name="PbUsernamePlaceholder" Panel.ZIndex="1" Content="Username" Margin="25,20,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Opacity="0.75" HorizontalContentAlignment="Left" Padding="0,0,0,0"  IsHitTestVisible="False"></Label>
-        <TextBox x:Name="TbUsername" Panel.ZIndex="0" HorizontalAlignment="Left" Margin="20,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="140" IsKeyboardFocusedChanged="TbUsername_IsKeyboardFocusedChanged"/>
-        <Label x:Name="PbEmailPlaceholder" Panel.ZIndex="1" Content="Email" Margin="25,40,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Opacity="0.75" HorizontalContentAlignment="Left" Padding="0,0,0,0"  IsHitTestVisible="False"></Label>
-        <TextBox x:Name="TbEmail" Panel.ZIndex="0" HorizontalAlignment="Left" Margin="20,40,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="140" IsKeyboardFocusedChanged="TbEmail_IsKeyboardFocusedChanged"></TextBox>
-        <Button Content="Wachtwoord vergeten" HorizontalAlignment="Left" Margin="20,60,0,0" VerticalAlignment="Top" Width="140" Height="20" Click="Button_Click"></Button>
+        Title="ForgotPasswordWindow" MinHeight="120" MinWidth="180" Height="120" Width="180">
+    <Grid Margin="20">
+        <Label x:Name="PbUsernamePlaceholder" Panel.ZIndex="1" Content="Username" Margin="5,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Opacity="0.75" HorizontalContentAlignment="Left" Padding="0,0,0,0"  IsHitTestVisible="False"></Label>
+        <TextBox x:Name="TbUsername" Panel.ZIndex="0" HorizontalAlignment="Left" Margin="0,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="140" IsKeyboardFocusedChanged="TbUsername_IsKeyboardFocusedChanged"/>
+        <Label x:Name="PbEmailPlaceholder" Panel.ZIndex="1" Content="Email" Margin="5,20,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Opacity="0.75" HorizontalContentAlignment="Left" Padding="0,0,0,0"  IsHitTestVisible="False"></Label>
+        <TextBox x:Name="TbEmail" Panel.ZIndex="0" HorizontalAlignment="Left" Margin="0,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="140" IsKeyboardFocusedChanged="TbEmail_IsKeyboardFocusedChanged"></TextBox>
+        <Button Content="Wachtwoord vergeten" HorizontalAlignment="Left" Margin="0,40,0,0" VerticalAlignment="Top" Width="140" Height="20" Click="Button_Click"></Button>
 
     </Grid>
 </Window>
